[package]
name = "lock_api"
version = "0.4.11"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Wrappers to create fully-featured Mutex and RwLock types. Compatible with no_std."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "rwlock", "lock", "no_std"]
categories = ["concurrency", "no-std"]
edition = "2021"
rust-version = "1.56.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
scopeguard = { git = "https://github.com/sunfishcode/scopeguard", branch = "rustc-dep-of-std", default-features = false }
owning_ref = { git = "https://github.com/sunfishcode/owning-ref-rs", branch = "rustc-dep-of-std", optional = true, default-features = false }

# Optional dependency for supporting serde.  Optional crates automatically
# create a feature with the same name as the crate, so if you need serde
# support, just pass "--features serde" when building this crate.
serde = { version = "1.0.126", default-features = false, optional = true }

# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = '0.1.49', optional = true }

[build-dependencies]
autocfg = "1.1.0"

[features]
default = ["atomic_usize"]
nightly = []
arc_lock = []
atomic_usize = []
rustc-dep-of-std = ["core", "alloc", "compiler_builtins", "scopeguard/rustc-dep-of-std", "owning_ref/rustc-dep-of-std"]
